--- a/220715.md
+++ b/220715.md
@@ -48,8 +48,8 @@ git push origin master
     
 - *_ List
 
-- [string](url) Link
-- ![string](image_url) Image
+- [name](url) Link
+- ![name](image_url) Image
 
 - ** xxxx** Bold
 - *xxxx* Italic
